--- a/dacha.html
+++ b/dacha.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Авторадио</title>
+  <title>Радио Дача</title>
   <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.7/mediaelementplayer.min.css'><link rel="stylesheet" href="./style.css">
 
@@ -12,7 +12,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Авторадио</title>
+    <title>Радио Дача</title>
 </head>
 
 <body>
@@ -20,15 +20,15 @@
         <div class="container">
             <div class="music-player">
                 <div class="cover">
-                    <img src="http://www.playrostov.ru/Авторадио/cbcbcbb.png" alt="">   
+                    <img src="https://fmrostov.github.io/Dachakamensk.github.io/LlM1-XKvgbw112.png" alt="">   
                 </div>
                 <div class="titre">
-                    <h3>Авторадио - Каменск</h3>
-                    <h1>89.6 FM</h1>
+                    <h3>Радио Дача - Каменск</h3>
+                    <h1>89.0 FM</h1>
                 </div>
                 <div class="lecteur">
                     <audio style="width: 100%;" class="fc-media">
-                        <source src="http://pub0101.101.ru:8000/stream/reg/mp3/128/region_avto_317?" type="audio/mp3"/>
+                        <source src="http://listen3.vdfm.ru:8000/dacha?type=.aac" type="audio/mp3"/>
                     </audio>
                 </div>
             </div>
