--- a/dacha.html
+++ b/dacha.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="lecteur">
                     <audio style="width: 100%;" class="fc-media">
-                        <source src="http://listen3.vdfm.ru:8000/dacha?type=.aac" type="audio/mp3"/>
+                        <source src="https://online2.gkvr.ru:8001/dacha_rnd_64.aac" type="audio/mp3"/>
                     </audio>
                 </div>
             </div>
