--- a/dacha.html
+++ b/dacha.html
@@ -23,8 +23,9 @@
                     <img src="https://fmrostov.github.io/Dachakamensk.github.io/LlM1-XKvgbw112.png" alt="">   
                 </div>
                 <div class="titre">
-                    <h3>Радио Дача - Каменск</h3>
+                    <h3>Радио Дача - Каменск</h3>       
                     <h1>89.0 FM</h1>
+                  <h3>Вещание временно ведётся с Ростова-на-Дону</h3>
                 </div>
                 <div class="lecteur">
                     <audio style="width: 100%;" class="fc-media">
